--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv-formats": "^3.0.1",
     "bootstrap": "^5.3.2",
     "fontsource-roboto": "^4.0.0",
     "js-cookie": "^3.0.5",
